simple-api/rolling-update-with-deployment/simple-api-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: simple-api-deployment
  namespace: api
  labels:
    app: simple-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: simple-api
        image: skaqud/simple-api
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
  minReadySeconds: 30
  revisionHistoryLimit: 3
